// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> is checked shouldComponentUpdate 1`] = `
<div
  className="mfui-text-field mfui-text-field_error mfui-text-field_icon mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field__icon-box"
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__text mfui-text-field__text_error"
    dangerouslySetInnerHTML={
      Object {
        "__html": "text",
      }
    }
  />
</div>
`;

exports[`<TextField /> is checked shouldComponentUpdate with new props 1`] = `
<div
  className="mfui-text-field mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> it renders TextField 1`] = `
<div
  className="mfui-text-field mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> it renders custom icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_icon mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_custom"
    >
      <img />
    </div>
  </div>
</div>
`;

exports[`<TextField /> it renders error icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_error mfui-text-field_icon mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field__icon-box"
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__text mfui-text-field__text_error"
    dangerouslySetInnerHTML={
      Object {
        "__html": "text",
      }
    }
  />
</div>
`;

exports[`<TextField /> it renders mask input 1`] = `
<div
  className="mfui-text-field mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <_default
        autoComplete="off"
        className="mfui-text-field__field"
        inputRef={[Function]}
        mask="(999) 999-99-99"
        maskChar=" "
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> it renders texts 1`] = `
<div
  className="mfui-text-field mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__text mfui-text-field__text_comment"
  >
    text
  </div>
  <div
    className="mfui-text-field__text mfui-text-field__text_success"
  >
    text
  </div>
</div>
`;

exports[`<TextField /> it renders valid icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_valid mfui-text-field_icon mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field__icon-box"
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__text mfui-text-field__text_error"
    dangerouslySetInnerHTML={
      Object {
        "__html": "text",
      }
    }
  />
</div>
`;

exports[`<TextField /> it renders without error icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_error mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> it renders without valid icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_valid mfui-text-field_color_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field__field"
        type="text"
      />
    </div>
  </div>
</div>
`;
